Add JVM args to Gradle applications for native memory access